force-app/main/default/objects/Opportunity/fields/Document_Security_Code__c.field-meta.xml
<CustomField>
    <fullName>Document_Security_Code__c</fullName>
    <description>Document Security Code</description>
    <inlineHelpText>Document Security Code</inlineHelpText>
    <label>Document Security Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thumbnail</fullName>
            </value>
            <value>
                <fullName>Viewer</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>