force-app/main/default/objects/Opportunity/fields/EnquiryId__c.field-meta.xml
<CustomField>
    <fullName>EnquiryId__c</fullName>
    <label>EnquiryId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>