force-app/main/default/objects/Opportunity/fields/sign_status__c.field-meta.xml
<CustomField>
    <fullName>sign_status__c</fullName>
    <label>sign status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document sent</fullName>
            </value>
            <value>
                <fullName>Document viewed</fullName>
            </value>
            <value>
                <fullName>Document signed</fullName>
            </value>
            <value>
                <fullName>Document generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>